--- a/GUI/main.css
+++ b/GUI/main.css
@@ -84,7 +84,7 @@ video{
 
 .videohoch{
     width:25%;
-    margin-left: 37%;
+    margin-left: 6%;
 }
 
 .centerimg{
@@ -109,3 +109,18 @@ a:hover{
     text-decoration: none;
 }
 
+.videobox{
+
+}
+
+.img{
+    width: 100%;
+    margin-bottom: 5%;
+}
+
+.imgside{
+    width: 48%;
+    margin-right: 2%;
+    margin-bottom: 5%;
+    float: left;
+}
