--- a/VUI/main.css
+++ b/VUI/main.css
@@ -128,3 +128,26 @@ a:hover{
     margin-bottom: 5%;
     float: left;
 }
+
+.button{
+    background-color: #8cbfe2;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
+.centerbtn{
+    width:100%; 
+    height:100%; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
