--- a/VR/main.css
+++ b/VR/main.css
@@ -27,11 +27,13 @@ p {
     text-align: center;
 }
 
+
 li{
     font-family: libre-franklin, sans-serif;
     font-weight: 400;
     font-style: normal;
-    margin: 1%
+    margin: 1%;
+
 }
 
 h1{
