--- a/WRAPUP/main.css
+++ b/WRAPUP/main.css
@@ -61,10 +61,12 @@ h3 {
 
 h4 {
   font-family: libre-franklin, sans-serif;
-  font-weight: 600;
+  font-weight: 200;
   font-style: normal;
-  margin-top: 4%;
-  margin-bottom: 1%;
+  font-size: 1em;
+  margin-bottom: -1%;
+  text-align: center;
+  margin-top: 1%;
 }
 
 .text {
@@ -80,9 +82,8 @@ h4 {
   padding: 1% 30% 1% 30%;
 }
 
-.videohoch {
-  width: 25%;
-  margin-left: 6%;
+.videohoch{
+  width:35%;
 }
 
 .centerimg {
@@ -108,11 +109,13 @@ a:hover {
 }
 
 .videobox {
+  margin: 0% 0% 0% 39%;
 }
 
-.img {
+img {
   width: 100%;
   margin-bottom: 5%;
+  margin-top: 2%;
 }
 
 .imgside {
