--- a/WRAPUP/main.css
+++ b/WRAPUP/main.css
@@ -56,7 +56,7 @@ h3 {
   font-weight: 200;
   font-style: normal;
   font-size: 1.5em;
-  margin-bottom: -1%;
+  margin-bottom: 3%;
 }
 
 h4 {
@@ -67,6 +67,16 @@ h4 {
   margin-bottom: -1%;
   text-align: center;
   margin-top: 1%;
+}
+
+h5 {
+  font-family: libre-franklin, sans-serif;
+  font-weight: 200;
+  font-style: normal;
+  font-size: 1.3em;
+  margin-bottom: 2%;
+  text-align: center;
+  margin-top: 2%;
 }
 
 .text {
@@ -82,8 +92,8 @@ h4 {
   padding: 1% 30% 1% 30%;
 }
 
-.videohoch{
-  width:35%;
+.videohoch {
+  width: 35%;
 }
 
 .centerimg {
@@ -143,6 +153,34 @@ nav a {
 nav a:hover,
 nav a:focus {
   outline: none;
-  
 }
 
+.superwrap {
+  position: relative;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card {
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  height: 600px;
+  margin: 1rem;
+  position: relative;
+  width: 45%;
+}
+
+.card-1 {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.card-1:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.cj{
+  margin: 3%;
+}
