--- a/WRAPUP/main.css
+++ b/WRAPUP/main.css
@@ -16,6 +16,7 @@ body {
   color: #808080;
   margin: 0;
   padding: 0;
+
 }
 
 p {
@@ -76,7 +77,17 @@ h5 {
   font-size: 1.3em;
   margin-bottom: 2%;
   text-align: center;
-  margin-top: 2%;
+  margin-top: 4%;
+}
+h6 {
+  font-family: libre-franklin, sans-serif;
+  font-weight: 200;
+  font-style: normal;
+  font-size: 1em;
+  margin-bottom: -1%;
+  text-align: left;
+  margin-top: 1%;
+  text-decoration: underline;
 }
 
 .text {
@@ -93,7 +104,14 @@ h5 {
 }
 
 .videohoch {
+  width: 47%;
+}
+
+.videohoch2 {
   width: 35%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0% 10% 0% 0%;
 }
 
 .centerimg {
@@ -119,7 +137,11 @@ a:hover {
 }
 
 .videobox {
-  margin: 0% 0% 0% 39%;
+  margin: 0% 0% 0% 35%;
+}
+
+.videobox2 {
+  margin: 0% 0% 0% 18%;
 }
 
 img {
@@ -155,18 +177,22 @@ nav a:focus {
   outline: none;
 }
 
-.superwrap {
-  position: relative;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 .card {
   background: #fff;
   border-radius: 2px;
   display: inline-block;
-  height: 600px;
+  height: 625px;
+  margin: 1rem;
+  position: relative;
+  width: 45%;
+}
+
+.cardshort {
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  height: 525px;
   margin: 1rem;
   position: relative;
   width: 45%;
@@ -182,5 +208,10 @@ nav a:focus {
 }
 
 .cj{
-  margin: 3%;
+  margin: 5%;
+}
+
+.einblenden{
+  opacity: 0;
+  transition: opacity .5s ease-in-out;
 }
