--- a/WRAPUP/main.css
+++ b/WRAPUP/main.css
@@ -16,7 +16,6 @@ body {
   color: #808080;
   margin: 0;
   padding: 0;
-
 }
 
 p {
@@ -177,7 +176,6 @@ nav a:focus {
   outline: none;
 }
 
-
 .card {
   background: #fff;
   border-radius: 2px;
@@ -207,11 +205,15 @@ nav a:focus {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.cj{
+.cj {
   margin: 5%;
 }
 
-.einblenden{
+.einblenden {
   opacity: 0;
-  transition: opacity .5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.li {
+  line-height: 1.5;
 }
